--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
-      {
-          "path": "/api/v1/email/reports/hosting",
-          "schedule": "0 */5 * ? * *"
-      }
+    {
+      "path": "/api/hello",
+      "schedule": "*/10 * * * *"
+    }
   ]
 }
